[package]
name = "r-xlf"
authors = ["theschitz <17023248+theschitz@users.noreply.github.com>"]
description = "Serializing & deserializing Xliff with Rust as WebAssembly"
license = "MIT/Apache-2.0"
repository = "https://github.com/theschitz/r-xlf"
version = "0.1.20220225091500"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
quick-xml = { version = "0.22", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
serde_xml = "0.9.1"